# horror_analysis

./: LICENSE  Makefile  README.md  pyproject.toml
data/raw/: horror_data_master_v10_final_only.csv  horror_data_master_v11.csv  placeholder.txt
docs/: mkdocs.yml
docs/docs/: index.md
modeling_figures/: figures_README.md
models/: gradient_boosting_model.pkl  linear_regression_model.pkl  model_parameters.json  model_results.json
notebooks/: Sprint_2_EDA.ipynb  building_core_imdb_horrorpt2_.ipynb  horror_analysis_modeling.ipynb  horror_data_gatheringpt1.py
